--- a/README
+++ b/README
@@ -1,45 +1,19 @@
 maven-tree - maven dependency tree graph builder
-
-1) Overview
-2) Requirements
-3) Usage
-4) License
-
-
-------------------------------------------------------------------------
+------------------------------------------------
 Overview
 
-maven-tree recurses through your maven projects and generates a graph
-from the declared dependencies.
+maven-tree recurses through your maven projects and generates a graph from the declared dependencies, parent and modules.
 
-The generated dependencies file is in the GraphML format
-(http://graphml.graphdrawing.org/) and can be viewed / analyzed with
-applications like Gephi (http://gephi.github.io/). Gephi allows you to
-visualize the graph and calculate common graph metrics like for example
-the degree of edges or nodes.
+Based on xml parsing, this code is a small hack for my specific needs (working on a huge spaghetti code) and does not pretend to a robust industrial code.
 
+I've been using Gephi (http://gephi.github.io/) to explore the graph.
+
+Hopefully it may help you.
 
 ------------------------------------------------------------------------
 Requirements
 
-maven-tree require the pygraphml python module. Install pygraphml like
-this:
+maven-tree require the networkx python module.
 
-$ git clone https://github.com/hadim/pygraphml.git
-$ cd pygraphml/
-$ pip install .
-
-
-------------------------------------------------------------------------
-Usage
-
-$ python maven-tree.py output.graphml path/to/maven_dirs
-
-For more options see:
-$ python maven-tree.py --help
-
-
-------------------------------------------------------------------------
-License
-
-See file COPYING for details.
+For the moment it creates graphs in the gexf format.
+But you may modify the code for any networkx supported format.
